--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -185,6 +185,9 @@
     "from_reg_payment": "Pembayaran Formulir Pendaftaran",
     "fullname": "Nama Lengkap",
     "gender": "Jenis Kelamin",
+    "MALE": "PRIA",
+    "FEMALE": "WANITA",
+    "gender-choosing": "Jenis Kelamin",
     "go-to-admision-dashboard": "Dashboard Admisi",
     "gpa": "Nilai Akhir",
     "graduate_year": "Tahun Lulus",
