progress mappig dan atur select dropdown pilihan seleksi

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -155,7 +155,7 @@
     "eprt-type-id": "TOEFL Type",
     "error-type-file": "File is not supported, please input file with format (.jpg, .jpeg, .png, .pdf)",
     "even": "Even",
-    "exam-cbt": "CBT exam schedule setting",
+    "exam-cbt": "exam schedule setting",
     "exam-date": "Exam Date",
     "exam-end-time": "Exam End Time",
     "exam-implementation-data": "Exam Data",
@@ -755,6 +755,10 @@
     "manage-participant-data": "Participant Management",
     "manage-selection-data": "Selection Data Management",
     "new_registration": "Order Form",
+    "manage-master-data": "Master Data",
+    "manage-master-mapping": "Mapping",
+    "mapping-doc-kategory": "Documsnt to Category",
+    "mapping-category-prody": "Formulir Category to Prodi",
     "participant-data": "Participant Data",
     "payment-data": "Payment Data",
     "program-data": "Program Data",
