--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -155,7 +155,7 @@
     "eprt-type-id": "Jenis TOEFL",
     "error-type-file": "File tidak didukung, mohon masukan file dengan format (.jpg, .jpeg, .png, .pdf)",
     "even": "Genap",
-    "exam-cbt": "Pengaturan jadwal ujian CBT",
+    "exam-cbt": "Pengaturan jadwal ujian",
     "exam-date": "Tanggal Ujian",
     "exam-end-time": "Waktu Akhir Ujian",
     "exam-implementation-data": "Data Pelaksanaan Ujian",
@@ -617,7 +617,6 @@
     "alert-validate-participant-with-selection-path": "Anda hanya dapat mendaftar satu kali pada jalur seleksi yang sama",
     "welcome-home-1": "Pada menu Data Diri berisi data biodata, data pendidikan, data orang tua, dan data pekerjaan calon mahasiswa baru yang nantinya akan digunakan sebagai syarat awal sebelum calon mahasiswa baru membeli formulir .",
     "welcome-home-2": "Kemudian untuk menu Data Registrasi terdapat submenu Daftar Seleksi yang digunakan calon mahasiswa baru untuk memesan formulir pendaftaran, sedangkan submenu Riwayat Pendaftaran digunakan calon mahasiswa baru untuk melihat formulir pemesanan, harga pin, status pembayaran, serta kelengkapan data registrasi. Dan menu Data Kelulusan digunakan calon mahasiswa baru untuk melihat status kelulusan pada formulir yang telah dipesan.",
-    "welcome-superadmin": "Aplikasi ini merupakan aplikasi yang dikelola oleh superadmin. Superadmin dapat mengelola data seleksi mencakup data Jalur Seleksi, data Passing Grade, data Jadwal Jalur Seleksi, data Intake, data Kuisioner. \nKemudian juga dapat mengelola data partisipan mencakup, data detail Partisipan, data Pembayaran, data Dokumen, data Kelulusan, data Nilai Partisipan dan juga data Persetujuan Nilai Partisipan.\nSerta superadmin dapat mengelola data pengumuman yang terdapat di kartu peserta yaitu, data Pengumuman.",
     "app-name": "Aplikasi Penerimaan Mahasiswa Baru Universitas Trisakti",
     "welcome-facultyadmin": "Aplikasi ini merupakan aplikasi yang dikelola oleh admin Fakultas. Admin Fakultas dapat mengelola data Partisipan, mencakup Data Partisipan, data Dokumen Partisipan, Data Kelulusan, Penyetaraan Kredit Transfer. Serta admin Fakultas juga dapat mengelola data pengumuman yang terdapat di kartu peserta yaitu, data Pengumuman.",
     "welcome-universityadmin": "Aplikasi ini merupakan aplikasi yang dikelola oleh admin Universitas. Admin Universitas dapat mengelola data Partisipan, mencakup data Partisipan, data Dokumen Partisipan, data Kelulusan, data Nilai Partisipan, dan data Persetujuan Nilai Partisipan. Serta admin Fakultas juga dapat mengelola data pengumuman yang terdapat di kartu peserta yaitu, data Pengumuman.",
@@ -756,6 +755,10 @@
     "document-data": "Data dokumen partisipan",
     "exam-detail-data": "Data Lokasi Ujian",
     "form-order": "Pemesanan Formulir",
+    "manage-master-data": "Master Data",
+    "manage-master-mapping": "Mapping",
+    "mapping-doc-kategory": "Dokumen to Kategori",
+    "mapping-category-prody": "Kategori Formulir to Prodi",
     "manage-participant-data": "Kelola Partisipan",
     "manage-selection-data": "Kelola Data Seleksi",
     "new_registration": "Pesan Formulir",
