map prodi to formulir, penentuan harga formulir by mapping prodi

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,6 +84,7 @@
     "choice-of-study-program": "Choice of Study Program",
     "choose-city-location": "Choose City Location",
     "choose-document-type": "Choose Document Type",
+    "choose-prodi-type": "Choose Prodi",
     "choose-exam-date": "Choose Exam Date",
     "choose-exam-location": "Choose Exam Location",
     "choose-faculty": "Choose Faculty",
@@ -321,6 +322,11 @@
     "pic-phone-number": "Person in Charge Phone Number",
     "pin-offline-code": "Offline Pin",
     "pin-price": "Form Price",
+    "label-price" : "Price",
+    "label-form": "Form",
+    "label-medis": "Medis",
+    "label-nonmedis": "Non Medis",
+    "label-prodi": "Prodi",
     "pin-price-data": "Form Pricing Data",
     "pin-verification": "Pin Verification",
     "pin_activation": "Pin Activation",
@@ -355,6 +361,7 @@
     "print-passing-letter": "Print Graduation Cards",
     "priority": "Choice of Study Program",
     "program": "Program",
+    "mapping-prodi-to-minat": "Mapping Prodi to interest",
     "program-category": "Program Category",
     "program-description": "Program Description",
     "program-name": "Program Name",
@@ -767,7 +774,9 @@
     "master-form-selection": "Form",
     "master-stundent-interes": "Student Interes",
     "manage-master-mapping": "Mapping",
-    "mapping-doc-kategory": "Documsnt to Category",
+    "mapping-prodi-minat": "Interes",
+    "mapping-doc-kategory": "Document",
+    "mapping-doc-formulir": "Formulir",
     "mapping-category-prody": "Formulir Category to Prodi",
     "participant-data": "Participant Data",
     "payment-data": "Payment Data",
