--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -35,6 +35,8 @@
     "add-exam-path": "Tambah Jadwal Ujian",
     "add-exam-time": "Waktu Ujian",
     "add-pin-price": "Harga Formulir",
+    "label-price": "Harga",
+    "label-form": "Formulir",
     "add-program-data": "Data Program",
     "add-question": "Tambah Pertanyaan",
     "add-selection-step": "Tahapan Seleksi",
@@ -84,6 +86,7 @@
     "choice-of-study-program": "Pilihan Program Studi",
     "choose-city-location": "Pilih Kota Lokasi",
     "choose-document-type": "Pilih Jenis Dokumen",
+    "choose-prodi-type": "Pilih Prodi",
     "choose-exam-date": "Pilih Tanggal dan Waktu Ujian",
     "choose-exam-location": "Pilih Lokasi Ujian",
     "choose-faculty": "Pilih Fakultas",
@@ -217,6 +220,8 @@
     "ipk-score": "Nilai IPK",
     "ipk_score": "IPK",
     "is-medis": "Kategori",
+    "label-medis": "Medis",
+    "label-nonmedis": "Non Medis",
     "is-required": "perlu diisi",
     "is-technic": "Syarat Jurusan",
     "last_education": "Pendidikan Terakhir",
@@ -237,6 +242,7 @@
     "max-range-score": "Makimum nilai yang diinputkan adalah 100",
     "medical-type": "Kategori Formulir",
     "mention-special-needs": "Sebutkan",
+    "label-prodi": "Prodi",
     "min-SDP2": "Besaran Minimal SDP2",
     "min-length": "Nomor ponsel minimal berisikan 11 digit",
     "min-length-phone-parents": "Nomor ponsel minimal berisikan 10 digit",
@@ -354,6 +360,8 @@
     "print-passing-letter": "Cetak Kartu Kelulusan",
     "priority": "Pilihan Program Studi",
     "program": "Program",
+    "mapping-prodi-to-minat": "Mapping Prodi ke Minat",
+    "mapping-prodi-to-formulir": "Mapping Prodi ke Formulir",
     "program-category": "Kategori Program",
     "program-description": "Deskripsi Program",
     "program-name": "Nama Program",
@@ -767,7 +775,9 @@
     "master-form-selection": "Formulir",
     "master-stundent-interes": "Minat Camaba",
     "manage-master-mapping": "Mapping",
-    "mapping-doc-kategory": "Dokumen to Kategori",
+    "mapping-prodi-minat": "Minat",
+    "mapping-doc-kategory": "Dokumen",
+    "mapping-doc-formulir": "Formulir",
     "mapping-category-prody": "Kategori Formulir to Prodi",
     "manage-participant-data": "Kelola Partisipan",
     "manage-selection-data": "Kelola Data Seleksi",
